fix title cutoffs

--- a/src/components/FormSection/FormSection.module.css
+++ b/src/components/FormSection/FormSection.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   margin-top: 20px;
   padding-left: 25px;
+  padding-bottom: 2px;
   font-size: 1.4em;
   cursor: pointer;
 }
